<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="wrap_content"
    android:background="@color/primaryDark"
    android:padding="5dp"
    >




 <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
     android:layout_margin="5dp"
     android:padding="10dp"
     android:background="@drawable/property_bg"
     >


  <ProgressBar
      android:id="@+id/uploadProgress"
      android:layout_width="215dp"
      android:layout_height="190dp"
      android:layout_gravity="center"
      android:visibility="gone"/>

  <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
     android:visibility="visible"
     android:paddingStart="10dp"
      android:paddingRight="10dp"
      android:paddingLeft="10dp"
      android:paddingBottom="50dp"
      android:layout_margin="7dp"
      android:id="@+id/linearLayout">

   <TextView
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/property_name"
       android:fontFamily="@font/antic"
       android:textColor="@color/black"
       android:textSize="18sp"
       android:textStyle="italic"
       android:padding="5dp"
       android:layout_marginRight="3dp"
       />

    <TextView
        android:layout_marginStart="20dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/property_name"
        android:textSize="20sp"
        android:id="@+id/nameTV"/>

    <TextView
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/antic"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="italic"
        android:padding="5dp"
        android:layout_marginRight="3dp"
        android:text="@string/property__type"/>

    <TextView
        android:layout_marginStart="20dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/property__type"
        android:textSize="20sp"
        android:id="@+id/typeTV"/>

    <TextView
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/antic"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="italic"
        android:padding="5dp"
        android:layout_marginRight="3dp"
        android:text="@string/property_lease_type"/>

    <TextView
        android:layout_marginStart="20dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/property__type"
        android:textSize="20sp"
        android:id="@+id/leaseType"/>




    <TextView
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/antic"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="italic"
        android:padding="5dp"
        android:layout_marginRight="3dp"
        android:text="@string/location"/>

    <TextView
        android:layout_marginStart="20dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/location"
        android:textSize="20sp"
        android:id="@+id/locationtv"/>







    <TextView
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/antic"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="italic"
        android:padding="5dp"
        android:layout_marginRight="3dp"
        android:text="@string/local_amenities_"/>

    <TextView
        android:layout_marginStart="20dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/local_amenities_"
        android:textSize="20sp"
        android:id="@+id/localAmenitiesTV"/>




    <TextView
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/antic"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="italic"
        android:padding="5dp"
        android:layout_marginRight="3dp"
        android:text="@string/description"/>

    <TextView
        android:layout_marginStart="20dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/description"
        android:textSize="20sp"
        android:id="@+id/descriptiontv"/>


    <TextView
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/antic"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="italic"
        android:padding="5dp"
        android:layout_marginRight="3dp"
        android:text="@string/number_of_bathrooms"/>

    <TextView
        android:layout_marginStart="20dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/number_of_bathrooms"
        android:textSize="20sp"
        android:id="@+id/bathroomNumber"/>


    <TextView
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/antic"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="italic"
        android:padding="5dp"
        android:layout_marginRight="3dp"
        android:text="@string/number_of_bedrooms"/>

    <TextView
        android:layout_marginStart="20dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/number_of_bedrooms"
        android:textSize="20sp"
        android:id="@+id/bedroomNumber"/>




    <TextView
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/antic"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="italic"
        android:padding="5dp"
        android:layout_marginRight="3dp"
        android:text="@string/size_squared_meter"/>

    <TextView
        android:layout_marginStart="20dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/size_squared_meter"
        android:textSize="20sp"
        android:id="@+id/size"/>



    <TextView
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/antic"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="italic"
        android:padding="5dp"
        android:layout_marginRight="3dp"
        android:text="@string/asking_price"/>

    <TextView
        android:layout_marginStart="20dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/asking_price"
        android:textSize="20sp"
        android:id="@+id/askingPrice"
        />


   <Button
       android:id="@+id/confirmBT"
       android:layout_width="115dp"
       android:layout_height="wrap_content"
       android:layout_marginStart="10dp"
       android:layout_marginTop="20dp"
       android:padding="10dp"
       android:layout_marginRight="5dp"
       android:background="@drawable/round_btn"
       android:text="@string/confirm" />



   <Button
       android:id="@+id/cancelBT"
       android:layout_width="115dp"
       android:layout_marginTop="-50dp"
       android:layout_marginEnd="10dp"
       android:layout_height="wrap_content"
       android:layout_marginStart="10dp"
       android:padding="10dp"
       android:layout_marginLeft="5dp"
       android:background="@drawable/round_btn"
       android:text="@string/cancel"
       android:layout_gravity="end"/>

    </LinearLayout>


 </LinearLayout>

</ScrollView>